# kradio

./: .gitignore  AUTHORS  AppImageBuilder.fat.yml  AppImageBuilder.yml  CMakeLists.txt  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.am.in  Makefile.cvs  Makefile.i18n  Messages.sh  PKGBUILD  README  README.PVR  README.translations  README.your-help-is-wanted  REQUIREMENTS  TODO  TODO.kdetestscripts  configure.in.in  debian  dot-lircrc.example  extract-messages.sh  extract-messages.sh.patch  kradio.lsm  kradio4-fedora.spec  kradio4-opensuse.spec  kradio4-opensuse11.spec  kradio4.desktop  kradio5.desktop  merge-messages.sh  snapcraft.yaml  translation-stats.pl
convert-presets/: CMakeLists.txt  Messages.sh  convert-presets.cpp
convert-presets/po/: CMakeLists.txt  cs.po  de.po  es.po  is.po  it.po  kradio4_convert_presets.pot  kradio5_convert_presets.pot  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr@latin.po  tr.po  uk.po
debian/: files  (+11 more)
kradio.prehistoric/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  REQUIREMENTS  TODO  configure.in.in  kradio-mandrake.spec  kradio-suse.spec  kradio.kdevelop  kradio.kdevprj  kradio.lsm
kradio.prehistoric/admin/: Makefile.common  acinclude.m4.in  am_edit  cvs.sh  debianrules  libtool.m4.in
kradio.prehistoric/convert-presets/: .cvsignore  Makefile.am  convert-presets.cpp
kradio.prehistoric/debian/: .cvsignore  changelog  control  copyright  menu  rules
kradio.prehistoric/kradio/: .cvsignore  KRadio-Structure-README  KRadio-Structure.xmi  Makefile.am  aboutwidget.cpp  aboutwidget.h  alarm.cpp  alarm.h  buttonflowlayout.cpp  buttonflowlayout.h  displaycfg.cpp  displaycfg.h  displaycfg_interfaces.cpp  displaycfg_interfaces.h  docking-configuration-ui.ui  docking-configuration.cpp  docking-configuration.h  docking.cpp  docking.h  dot-lircrc.example  errorlog-interfaces.cpp  errorlog-interfaces.h  errorlog.cpp  errorlog.h  frequencyradiostation.cpp  frequencyradiostation.h  frequencyseekhelper.cpp  frequencyseekhelper.h  interfaces.h  internetradio.h  internetradiostation.cpp  internetradiostation.h  kradio.desktop  kradioapp.cpp  kradioapp.h  kradiorc.example  kradioui.rc  lircsupport.cpp  lircsupport.h  main.cpp  (+86 more)
kradio.prehistoric/po/: .cvsignore  convert-presets.pot  de.po  es.po  kradio.pot  pl.po
kradio.prehistoric/presets/: Makefile.am  update-makefile-dot-am.sh
kradio3/convert-presets/: .cvsignore  Makefile.am  convert-presets.cpp
kradio3/src/: .cvsignore  Makefile.am  aboutwidget.cpp  alarm.cpp  debug-profiler.cpp  errorlog-interfaces.cpp  errorlog-interfaces.h  fileringbuffer.cpp  fileringbuffer.h  frequencyradiostation.cpp  frequencyradiostation.h  frequencyseekhelper.cpp  internetradiostation.cpp  internetradiostation.h  kradio.desktop  kradioapp.cpp  kradioversion.h  main.cpp  multibuffer.cpp  plugin_configuration_dialog.cpp  pluginmanager-configuration-ui.ui  pluginmanager-configuration.cpp  pluginmanager.cpp  plugins.cpp  radio_interfaces.cpp  radiodevice_interfaces.cpp  radiodevicepool_interfaces.cpp  radiodevicepool_interfaces.h  radiostation-config.cpp  radiostation-listview.cpp  radiostation.cpp  ringbuffer.cpp  ringbuffer.h  seekhelper.cpp  soundformat.cpp  soundstreamclient_interfaces.cpp  soundstreamclient_interfaces.h  soundstreamid.cpp  standardscandialog.cpp  station-drag-object.cpp  (+7 more)
plugins/: CMakeLists.txt
plugins/alsa-sound/: CMakeLists.txt  Messages.sh  alsa-config-mixer-setting.cpp  alsa-config-mixer-setting.h  alsa-mixer-element-ui.ui  alsa-mixer-element.cpp  alsa-mixer-element.h  alsa-sound-configuration-ui.ui  alsa-sound-configuration.cpp  alsa-sound-configuration.h  alsa-sound-models.h  alsa-sound.cpp  alsa-sound.h  alsa-sounddevice-metadata.cpp  alsa-sounddevice-metadata.h  alsa-thread.cpp  alsa-thread.h
plugins/dbus/: CMakeLists.txt  Messages.sh  dbussupport.cpp  dbussupport.h  net.sourceforge.kradio.xml
plugins/gui-docking-menu/: CMakeLists.txt  Messages.sh  docking-configuration.cpp  docking-configuration.h  docking.cpp  docking.h
plugins/gui-error-log/: CMakeLists.txt  Messages.sh  errorlog.cpp  errorlog.h
plugins/gui-quickbar/: CMakeLists.txt  Messages.sh  buttonflowlayout4.cpp  buttonflowlayout4.h  quickbar-configuration.cpp  quickbar-configuration.h  quickbar.cpp  quickbar.h
plugins/gui-standard-display/: CMakeLists.txt  Messages.sh  displaycfg.cpp  displaycfg.h  displaycfg_interfaces.cpp  displaycfg_interfaces.h  nosizefontrequester.cpp  nosizefontrequester.h  radioview-configuration.cpp  radioview-configuration.h  radioview.cpp  radioview.h  radioview_element.cpp  radioview_element.h  radioview_frequencyradio.cpp  radioview_frequencyradio.h  radioview_frequencyseeker.cpp  radioview_frequencyseeker.h  radioview_seekinterface.ui  radioview_volume.cpp  radioview_volume.h
plugins/internetradio/: CMakeLists.txt  Messages.sh  databuffer.cpp  databuffer.h  decoder_thread.cpp  decoder_thread.h  icy_http_handler.cpp  icy_http_handler.h  internetradio-configuration-ui.ui  internetradio-configuration.cpp  internetradio-configuration.h  internetradio.cpp  internetradio.h  libav-global.cpp  libav-global.h  mmsx_handler.cpp  mmsx_handler.h  mmsx_handler_thread.cpp  mmsx_handler_thread.h  playlist_handler.cpp  playlist_handler.h  soundstream_decoding_event.h  soundstream_decoding_step_event.cpp  soundstream_decoding_step_event.h  soundstream_decoding_terminate_event.h  stream_input_buffer.cpp  stream_input_buffer.h  stream_reader.cpp  stream_reader.h
plugins/lirc/: CMakeLists.txt  Messages.sh  default-dot-lircrc  lirc-configuration-ui.ui  lirc-configuration.cpp  lirc-configuration.h  lircsupport.cpp  lircsupport.h  listviewitem_lirc.cpp  listviewitem_lirc.h  styleditemdelegate_lirc.cpp  styleditemdelegate_lirc.h
plugins/mpris/: CMakeLists.txt  Messages.sh  mprisbase.cpp  mprisbase.h  mprisplayer.cpp  mprisplayer.h  mprisroot.cpp  mprisroot.h  mprissupport.cpp  mprissupport.h
plugins/oss-sound/: Messages.sh  oss-sound-configuration-ui.ui  oss-sound-configuration.cpp  oss-sound-configuration.h  oss-sound.cpp  oss-sound.h
presets/: CMakeLists.txt  update-cmakelists-dot-txt.sh
(+1629 files in other folders)
